// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeviceItem /> with display name 1`] = `
<div>
  <div
    class="mx_AccessibleButton mx_UserInfo_device mx_UserInfo_device_unverified"
    role="button"
    tabindex="0"
    title="deviceId"
  >
    <div
      class="mx_E2EIcon mx_E2EIcon_normal"
    />
    <div
      class="mx_UserInfo_device_name"
    >
      deviceName
    </div>
    <div
      class="mx_UserInfo_device_trusted"
    />
  </div>
</div>
`;

exports[`<DeviceItem /> without display name 1`] = `
<div>
  <div
    class="mx_AccessibleButton mx_UserInfo_device mx_UserInfo_device_unverified"
    role="button"
    tabindex="0"
    title="deviceId"
  >
    <div
      class="mx_E2EIcon mx_E2EIcon_normal"
    />
    <div
      class="mx_UserInfo_device_name"
    >
      deviceId
    </div>
    <div
      class="mx_UserInfo_device_trusted"
    />
  </div>
</div>
`;
